@@ -1,5 +1,12 @@
 2008-04-17  Mike Kestner  <mkestner@novell.com>
 
+	* atk/glue/misc.c: glue for vms and singleton setup.
+	* atk/Misc.custom: add OnThreadsEnter, OnThreadsLeave, and
+	SetSingletonInstance members for Bridge implementors.
+	[More of #365437]
+
+2008-04-17  Mike Kestner  <mkestner@novell.com>
+
 	* glib/Object.cs: add Harden method to reduce the reflection 
 	overhead in Gnome.Program.
 
